# Helios

./: .gitignore  Cargo.toml  README.md
allocator/: Cargo.toml
allocator/src/: block.rs  lib.rs  slab.rs  telemetry.rs
container/: Cargo.toml
container/src/: cgroups.rs  container.rs  container_fs.rs  main.rs  namespaces.rs  seccomp.rs
docs/: allocator-design.md  architecture.md  cgroups.md  debugging-guide.md  design-tradeoffs.md  namespaces.md  process-model.md  shell-design.md  syscall-reference.md
examples/: Cargo.toml
scripts/: setup_rootfs.sh  test_shell.sh
shared/: Cargo.toml
shared/src/: lib.rs
shell/: Cargo.toml
shell/src/: exec.rs  jobs.rs  main.rs  parser.rs  signals.rs
