[workspace]
resolver = "2"
members = [
    "shared",
    "allocator",
    "shell",
    "container",
    "examples",
]

[workspace.dependencies]
nix = { version = "0.29", features = ["fs", "mount", "process", "signal", "user", "sched", "net", "term", "hostname"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
